--- a/Atividades/Mixed Letters starter/index - Copy.html
+++ b/Atividades/Mixed Letters starter/index - Copy.html
@@ -268,22 +268,131 @@
         }
     });
 
-    // ================== TTS ==================
-    let selectedVoice = null, alertDisplayed = false;
+    // ================== TTS (silencioso) + Áudio MP3 (iOS fix) ==================
+    let selectedVoice = null;
+
+    // === Player global exclusivo para PALAVRAS (iOS-friendly) ===
+    let wordPlayer = new Audio();
+    wordPlayer.preload = 'auto';
+    wordPlayer.setAttribute('playsinline', '');
+    wordPlayer.setAttribute('webkit-playsinline', '');
+
+    // "Desbloqueia" o pipeline de mídia no primeiro gesto (iOS)
+    let audioPrimed = false;
+    function primeAudioPipelineOnce() {
+      if (audioPrimed) return;
+      audioPrimed = true;
+      try {
+        const AC = window.AudioContext || window.webkitAudioContext;
+        if (AC) {
+          const ctx = new AC();
+          const osc = ctx.createOscillator();
+          const gain = ctx.createGain();
+          gain.gain.value = 0;
+          osc.connect(gain);
+          gain.connect(ctx.destination);
+          osc.start();
+          osc.stop(ctx.currentTime + 0.01);
+        }
+      } catch {}
+    }
+    window.addEventListener('pointerdown', primeAudioPipelineOnce, { once: true, passive: true });
+    window.addEventListener('touchstart',  primeAudioPipelineOnce, { once: true, passive: true });
+    window.addEventListener('click',       primeAudioPipelineOnce, { once: true, passive: true });
+
     function initializeVoices() {
         const synth = window.speechSynthesis;
         const voices = synth.getVoices();
-        selectedVoice = voices.find(v => v.lang.startsWith("en-")) || voices[0];
-        if (!selectedVoice && !alertDisplayed) { alertDisplayed = true; alert("No English voice found. Using default voice."); }
+        selectedVoice = voices.find(v => v.lang && v.lang.toLowerCase().startsWith("en-")) || voices[0] || null;
+        if (!selectedVoice) {
+            console.warn("SpeechSynthesis: no voices available.");
+        } else if (!String(selectedVoice.lang).toLowerCase().startsWith("en-")) {
+            console.warn("No 'en-US' voice found. Using first available voice:", selectedVoice.name);
+        }
     }
     window.speechSynthesis.onvoiceschanged = initializeVoices;
+
     function speak(text) {
         const synth = window.speechSynthesis;
-        synth.cancel();
+        try { if (!audioPrimed) primeAudioPipelineOnce(); } catch {}
+        try { if (!wordPlayer.paused) { wordPlayer.pause(); wordPlayer.currentTime = 0; } } catch {}
+        try { synth.cancel(); } catch {}
         if (!selectedVoice) initializeVoices();
         const u = new SpeechSynthesisUtterance(text);
-        u.voice = selectedVoice || synth.getVoices()[0];
+        u.lang = "en-US";
+        if (selectedVoice) u.voice = selectedVoice;
         synth.speak(u);
+    }
+
+    // Interrompe QUALQUER áudio corrente (palavra)
+    function stopCurrentAudio() {
+      try { if (!wordPlayer.paused) { wordPlayer.pause(); wordPlayer.currentTime = 0; } } catch {}
+    }
+
+    // Usa SEMPRE o mesmo <audio> para a PALAVRA (iOS gosta disso)
+    function tryPlayAudio(url) {
+      return new Promise((resolve) => {
+        try { stopCurrentAudio(); } catch {}
+        try { if (!audioPrimed) primeAudioPipelineOnce(); } catch {}
+
+        wordPlayer.src = url;
+        wordPlayer.onended = () => {};
+        wordPlayer.onerror = () => resolve(false);
+
+        try {
+          wordPlayer.load(); // importante no iOS
+          const p = wordPlayer.play();
+          if (p && typeof p.then === 'function') {
+            p.then(() => resolve(true)).catch(() => resolve(false));
+          } else {
+            resolve(true);
+          }
+        } catch {
+          resolve(false);
+        }
+      });
+    }
+
+    async function playFirstAvailable(urls) {
+      for (const u of urls) {
+        if (await tryPlayAudio(u)) return true;
+      }
+      return false;
+    }
+
+    // Janela para suprimir sons de letras após tocar a palavra
+    let suppressLettersUntil = 0;
+
+    // ---- MP3 de palavras (data1/sounds/som{N}.mp3) com fallback TTS ----
+    function playWordMp3OrSpeak(wordIndexZeroBased, wordText) {
+        const { level, unit } = getLevelAndUnitFromURL();
+        const n = wordIndexZeroBased + 1;
+        const base = `../../${level}/${unit}/data1/sounds`;
+        const urls = [`${base}/som${n}.mp3`, `${base}/som.${n}.mp3`];
+
+        // evita conflito com sons de letras
+        suppressLettersUntil = Date.now() + 900;
+
+        // dispara imediatamente (sem await)
+        playFirstAvailable(urls).then((ok) => {
+          if (!ok) speak(wordText);
+        });
+    }
+
+    // ---- MP3 das letras (./letras/som{N}.mp3) com fallback TTS ----
+    function letterIndex(ch) {
+        const up = (ch || '').toUpperCase();
+        const code = up.charCodeAt(0);
+        if (code >= 65 && code <= 90) return code - 64; // A=1..Z=26
+        return null;
+    }
+    async function playLetterMp3OrSpeak(ch) {
+        if (Date.now() < suppressLettersUntil) return; // evita competir com a palavra
+        const idx = letterIndex(ch);
+        if (!idx) { speak(ch); return; }
+        const urls = [`./letras/som${idx}.mp3`, `./letras/som.${idx}.mp3`];
+        const ok = await playFirstAvailable(urls);
+        if (!ok) speak(ch);
     }
 
     // ================== Estado e sessão ==================
@@ -310,7 +419,7 @@
     }
 
     // ================== Core da atividade (Drag & Drop) ==================
-    function createActivity(imageUrl, word) {
+    function createActivity(imageUrl, word, wordIndex) {
         const container = document.getElementById('activity-container');
         const div = document.createElement('div');
         div.className = 'activity';
@@ -344,7 +453,7 @@
             s.setAttribute('role', 'button');
             s.tabIndex = 0;
 
-            // Desktop DnD nativo — garantir compatibilidade
+            // Desktop DnD nativo
             s.addEventListener('dragenter', (e) => e.preventDefault());
             s.addEventListener('dragover',  (e) => e.preventDefault());
             s.addEventListener('drop', (e) => handleDrop(e, s));
@@ -414,15 +523,14 @@
             tile.tabIndex = 0;
 
             // ===== Desktop Drag & Drop =====
-            tile.addEventListener('dragstart', (e) => {
-                // Necessário para o drop funcionar em alguns navegadores
+            tile.addEventListener('dragstart', async (e) => {
                 try {
                     e.dataTransfer.setData('text/plain', tile.textContent);
                     e.dataTransfer.effectAllowed = 'move';
                 } catch (_) {}
                 tile.setAttribute('aria-grabbed', 'true');
                 tile.classList.add('dragging');
-                speak(ch);
+                await playLetterMp3OrSpeak(ch);
             });
             tile.addEventListener('dragend', (e) => {
                 tile.setAttribute('aria-grabbed', 'false');
@@ -430,11 +538,11 @@
                 tile.style.outline = 'none';
             });
 
-            tile.addEventListener('click', () => speak(ch));
+            tile.addEventListener('click', async () => { await playLetterMp3OrSpeak(ch); });
             
             // ===== Touch DnD =====
             if (isTouchDevice) {
-                tile.addEventListener('touchstart', (e) => handleTileTouchStart(e, tile), { passive: false });
+                tile.addEventListener('touchstart', async (e) => { handleTileTouchStart(e, tile); await playLetterMp3OrSpeak(ch); }, { passive: false });
                 tile.addEventListener('touchmove', (e) => handleTileTouchMove(e, tile), { passive: false });
                 tile.addEventListener('touchend', (e) => handleTileTouchEnd(e, tile), { passive: false });
                 tile.addEventListener('touchcancel', (e) => handleTileTouchCancel(e, tile));
@@ -445,7 +553,6 @@
 
         function handleDrop(e, slotEl) {
             e.preventDefault();
-            // Em desktop, o item sendo arrastado é o .dragging com aria-grabbed="true"
             const tile = document.querySelector('.tile[aria-grabbed="true"]');
             if (!tile) return;
             if (slotEl.firstElementChild) {
@@ -478,7 +585,6 @@
             activeTile = tile;
             tile.setAttribute('aria-grabbed', 'true');
             tile.classList.add('dragging');
-            speak(tile.textContent);
         }
         
         function handleTileTouchMove(e, tile) {
@@ -603,15 +709,16 @@
             });
         }
 
-        function checkAnswer(){
+        async function checkAnswer(){
             const ans = currentAnswer();
             if (ans.length !== word.length || slots.some(s => !s.querySelector('.tile'))) return;
 
             if (ans.toUpperCase() === word.toUpperCase()){
                 if (div.dataset.completed === "false") {
                     div.dataset.completed = "true";
-                    celebrate(div);   // ⬅️ cai purpurina SEMPRE que esta palavra for concluída
-                    speak(word);
+                    // toca a PALAVRA imediatamente — sem await
+                    playWordMp3OrSpeak(wordIndex, word);
+                    celebrate(div);   // Confete
                     completedWords++;
                     updateSessionStatus();
                 }
@@ -655,10 +762,10 @@
         container.appendChild(div);
     }
 
-    // Confete: corrigido para coordenadas da viewport (sem somar scrollY)
+    // Confete
     function celebrate(host){
         const rect = host.getBoundingClientRect();
-        const baseY = Math.max(0, rect.top + 10); // viewport Y
+        const baseY = Math.max(0, rect.top + 10);
         const minX = Math.max(0, rect.left - 50);
         const maxX = Math.min(window.innerWidth, rect.right + 50);
         for (let i=0;i<18;i++){
@@ -707,7 +814,7 @@
             words.forEach((word, index) => {
                 const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
                 activities.push(word);
-                createActivity(imageUrl, word);
+                createActivity(imageUrl, word, index); // ⬅️ passa o índice da palavra
             });
 
             updateSessionStatus();
