--- a/Atividades/Mixed Letters starter/index.html
+++ b/Atividades/Mixed Letters starter/index.html
@@ -91,20 +91,17 @@
         }
         .word-area { display: grid; gap: 12px }
 
-        /* ======= NOVO: drop-zone em uma LINHA, com fallback de scroll-x ======= */
+        /* ======= Drop-zone em uma LINHA, com scroll-x quando necessário ======= */
         .drop-zone {
             display: flex;
             gap: var(--slot-gap);
             flex-wrap: nowrap;                 /* não quebrar linha */
             min-height: var(--slot-h);
             align-items: center;
-            overflow-x: hidden;                /* padrão: sem scroll */
-            -webkit-overflow-scrolling: touch; /* suavidade no iOS quando ativar scroll */
-        }
-        /* Quando não couber nem no mínimo, ativamos scroll-x de forma elegante */
-        .drop-zone.scrollable {
-            overflow-x: auto;
-            touch-action: pan-x; /* permite arrastar a faixa horizontalmente sem conflitar com DnD */
+            overflow-x: auto;                  /* << auto por padrão evita corte à direita */
+            -webkit-overflow-scrolling: touch; /* suavidade no iOS */
+            padding-bottom: 2px;               /* evita “corte” visual do conteúdo no limite */
+            touch-action: pan-x;               /* permite deslizar quando houver scroll-x */
             scroll-snap-type: x proximity;
         }
 
@@ -118,7 +115,7 @@
             place-items: center;
             position: relative;
             outline: none;
-            flex: 0 0 var(--slot-w); /* fixo para calculo de uma linha */
+            flex: 0 0 var(--slot-w); /* fixo para cálculo linear */
             scroll-snap-align: center;
         }
         .slot:focus, .slot:focus-visible { outline: none }
@@ -139,6 +136,7 @@
             display: flex;
             gap: var(--slot-gap);
             flex-wrap: wrap;
+            justify-content: center;
             background: rgba(255,255,255,.8);
             border: 2px solid #eee;
             border-radius: 12px;
@@ -219,11 +217,9 @@
             to { transform: translateY(120vh) rotate(540deg); opacity: 0 }
         }
 
-        /* Layout menor: mantém grid, mas a linha única dos slots é garantida via JS/CSS vars */
         @media (max-width: 700px) {
             .activity { grid-template-columns: 1fr; justify-items: center }
             .activity img { width: 140px; height: 140px }
-            /* Não fixamos mais tamanhos aqui; o JS ajusta via vars. */
         }
     </style>
 </head>
@@ -396,7 +392,7 @@
     function playWordMp3OrSpeak(wordIndexZeroBased, wordText) {
         const { level, unit } = getLevelAndUnitFromURL();
         const n = wordIndexZeroBased + 1;
-        const base = `../../${level}/${unit}/data1/sounds`;
+        aconst base = `../../${level}/${unit}/data1/sounds`;
         const urls = [`${base}/som${n}.mp3`, `${base}/som.${n}.mp3`];
 
         // evita conflito com sons de letras
@@ -471,7 +467,6 @@
         // DROP ZONE
         const dropZone = document.createElement('div');
         dropZone.className = 'drop-zone';
-        // Sinaliza o número de letras para o ajuste
         dropZone.dataset.letters = String(word.length);
         area.appendChild(dropZone);
 
@@ -792,85 +787,66 @@
                 if (i === 0 && revealHintBtn.disabled) s.dataset.ghost = word[0].toUpperCase();
             });
             updatePerSlotFeedback();
-            // Recalcular após reset (caso mude algo no layout)
             requestAnimationFrame(() => fitSlotsToOneLine(dropZone));
         }
 
-        // ======= NOVO: Ajuste adaptativo para manter uma linha =======
-        // Observa mudanças de tamanho no card
+        // ======= Ajuste adaptativo para manter uma linha (com scroll se precisar) =======
         const ro = new ResizeObserver(() => fitSlotsToOneLine(dropZone));
         ro.observe(div);
 
-        // Recalcula também quando a imagem carregar (afeta layout)
         img.addEventListener('load', () => fitSlotsToOneLine(dropZone));
 
-        // Aplica o ajuste inicial
         requestAnimationFrame(() => fitSlotsToOneLine(dropZone));
 
         container.appendChild(div);
     }
 
-    // ======= NOVO: Funções para ajuste adaptativo de uma linha =======
+    // ======= Funções para ajuste adaptativo de uma linha =======
     function fitSlotsToOneLine(dropZoneEl){
         if (!dropZoneEl || !dropZoneEl.isConnected) return;
 
-        // Parâmetros e limites
         const letters = parseInt(dropZoneEl.dataset.letters || '0', 10) || 0;
         if (letters <= 0) return;
 
+        // Largura real do elemento (evita cortar à direita)
+        const available = Math.floor(dropZoneEl.getBoundingClientRect().width) || Math.floor(dropZoneEl.clientWidth);
+        const stylesRoot = getComputedStyle(document.documentElement);
         const gap = parseFloat(getComputedStyle(dropZoneEl).getPropertyValue('--slot-gap')) || 8;
 
-        // Largura disponível
-        // Usamos clientWidth da área pai (word-area) para ter o espaço líquido.
-        // Se o parent não for encontrado, usamos o próprio dropZone.
-        const host = dropZoneEl.parentElement || dropZoneEl;
-        const available = Math.floor(host.clientWidth);
+        const MIN_W = parseInt(stylesRoot.getPropertyValue('--slot-w-min')) || 48;
+        const MAX_W = parseInt(stylesRoot.getPropertyValue('--slot-w-max')) || 56;
+        const MIN_H = parseInt(stylesRoot.getPropertyValue('--slot-h-min')) || 56;
+        const MAX_H = parseInt(stylesRoot.getPropertyValue('--slot-h-max')) || 64;
 
-        // Limites definidos em :root
-        const styles = getComputedStyle(document.documentElement);
-        const MIN_W = parseInt(styles.getPropertyValue('--slot-w-min')) || 48;
-        const MAX_W = parseInt(styles.getPropertyValue('--slot-w-max')) || 56;
-        const MIN_H = parseInt(styles.getPropertyValue('--slot-h-min')) || 56;
-        const MAX_H = parseInt(styles.getPropertyValue('--slot-h-max')) || 64;
-
-        // Quanto espaço os gaps consomem
         const totalGaps = Math.max(0, letters - 1) * gap;
 
-        // Cálculo do slot "ideal" para caber em 1 linha
+        // tenta caber em 1 linha entre MIN..MAX
         let idealW = Math.floor((available - totalGaps) / letters);
-
-        // Se for NaN ou absurdo, aborta
         if (!Number.isFinite(idealW) || idealW <= 0) idealW = MAX_W;
 
-        // Clampa entre min e max
+        // clampa
         let slotW = Math.max(MIN_W, Math.min(MAX_W, idealW));
 
-        // Se no mínimo ainda não couber, ativamos scroll horizontal
-        const minTotal = MIN_W * letters + totalGaps;
+        // calcula largura total necessária com slotW escolhido
+        const needed = slotW * letters + totalGaps;
 
-        if (minTotal > available) {
-            // Ativa scroll-x com área de toque suave
-            dropZoneEl.classList.add('scrollable');
-            slotW = MIN_W; // fixa no mínimo para manter toque confortável
-        } else {
-            dropZoneEl.classList.remove('scrollable');
+        // se ainda não couber, ativa scroll e fixa no mínimo para toque confortável
+        if (needed > available) {
+            slotW = MIN_W;
         }
 
-        // Altura acompanha a proporção original 64/56 ≈ 1.1428, clamp nos limites
-        const ratio = MAX_H / MAX_W; // 64 / 56
+        // altura proporcional 64/56
+        const ratio = MAX_H / MAX_W; // 64/56
         let slotH = Math.round(slotW * ratio);
         slotH = Math.max(MIN_H, Math.min(MAX_H, slotH));
 
-        // Fonte proporcional, clamped para legibilidade
-        // Base: 1.6rem em 56px => fator = slotW/56
+        // tamanho de fonte proporcional
         const baseFontRem = 1.6;
         const scale = slotW / MAX_W;
         let tileFontRem = baseFontRem * scale;
-        // clamps suaves
         if (tileFontRem < 1.2) tileFontRem = 1.2;
         if (tileFontRem > 1.6) tileFontRem = 1.6;
 
-        // Aplica via CSS custom properties (escopo: drop-zone)
         dropZoneEl.style.setProperty('--slot-w', slotW + 'px');
         dropZoneEl.style.setProperty('--slot-h', slotH + 'px');
         dropZoneEl.style.setProperty('--tile-font', tileFontRem + 'rem');
