--- a/Atividades/Missing Word/index.html
+++ b/Atividades/Missing Word/index.html
@@ -79,7 +79,7 @@
             position:relative;
             overflow-x:auto;
             -webkit-overflow-scrolling:touch;
-            padding-bottom: 2px;
+            padding: 2px 4px;            /* <<< considerar no cálculo */
             touch-action: pan-x;
         }
         .drop-viewport[data-gradient-left="1"]::before,
@@ -96,8 +96,7 @@
         .drop-zone{
             display:flex; gap:var(--slot-gap); flex-wrap:nowrap; align-items:center;
             min-height: var(--slot-h);
-            justify-content:flex-start; /* <<< importante: garante que o 1º slot fique realmente à esquerda */
-            padding: 2px 4px;
+            justify-content:flex-start;
         }
 
         /* Inputs como “slots” */
@@ -107,7 +106,7 @@
             font-size: var(--tile-font);
             font-weight: 700;
             text-align: center;
-            border: 3px dashed #999;
+            border: 3px dashed #999;     /* <<< 3px em cada lado = +6px de largura real */
             border-radius: 12px;
             background: #fff;
             outline: none;
@@ -404,18 +403,16 @@
         letters.forEach((expected, index) => {
             const input = document.createElement('input');
             input.classList.add('missing-letter-input');
-            input.setAttribute('inputmode', 'latin');     // hint para teclado
+            input.setAttribute('inputmode', 'latin');
             input.setAttribute('autocomplete', 'off');
             input.setAttribute('autocorrect', 'off');
             input.setAttribute('autocapitalize', 'characters');
             input.setAttribute('spellcheck', 'false');
             input.maxLength = 1;
 
-            // Digitação: força 1 char, uppercase, avança foco, marca certo/errado
             input.addEventListener('input', () => {
                 let v = (input.value || '').toUpperCase();
-                if (v.length > 1) v = v.charAt(0); // trunca
-                // aceita somente A-Z; se não for, limpa e não avança
+                if (v.length > 1) v = v.charAt(0);
                 if (!/^[A-Z]$/.test(v)) {
                     input.value = '';
                     input.classList.remove('correct','incorrect');
@@ -423,7 +420,6 @@
                 }
                 input.value = v;
 
-                // marcação
                 if (v === expected.toUpperCase()) {
                     input.classList.add('correct');
                     input.classList.remove('incorrect');
@@ -432,12 +428,10 @@
                     input.classList.remove('correct');
                 }
 
-                // avança foco se houver próximo
                 if (index < letters.length - 1) {
                     letterInputs[index + 1].focus();
                 }
 
-                // verifica se todos estão preenchidos
                 const done = letterInputs.every(i => (i.value || '').length === 1);
                 if (done) {
                     const userWord = letterInputs.map(i => (i.value || '').toUpperCase()).join('');
@@ -449,7 +443,6 @@
                 }
             });
 
-            // Backspace: se vazio, volta para o anterior
             input.addEventListener('keydown', (e) => {
                 if (e.key === 'Backspace' && !input.value && index > 0) {
                     e.preventDefault();
@@ -486,7 +479,6 @@
         rightBtn.addEventListener('click',()=> nudgeScroll(dropViewport,  stepSize(dropZone)));
         enableThumbDrag(track, thumb, dropViewport, dropZone);
 
-        // Inicial: garante que a primeira casinha esteja visível
         requestAnimationFrame(()=> fitSlotsToOneLine(dropViewport, dropZone, dropWrap, track, thumb, {resetScroll:true}));
     }
 
@@ -496,7 +488,8 @@
         const cs=getComputedStyle(dropZone);
         const w=parseFloat(cs.getPropertyValue('--slot-w'))||56;
         const g=parseFloat(cs.getPropertyValue('gap'))||8;
-        return Math.round(w+g);
+        // inclui também a largura real de bordas (3px de cada lado = +6)
+        return Math.round(w + g + 6);
     }
     function nudgeScroll(viewport, delta){
         const max = viewport.scrollWidth - viewport.clientWidth;
@@ -539,58 +532,95 @@
         viewport.dataset.gradientLeft  = nearLeft ? '0' : '1';
         viewport.dataset.gradientRight = nearRight ? '0' : '1';
     }
+
+    /**
+     * Ajusta os slots para tentar CABER EM UMA LINHA antes de ativar o scroll.
+     * Considera: largura do slot + bordas (6px), gaps e padding do viewport.
+     */
     function fitSlotsToOneLine(viewport, dropZone, dropWrap, track, thumb, opts={}){
         const root = getComputedStyle(document.documentElement);
         const DZstyles = getComputedStyle(dropZone);
+        const VPstyles = getComputedStyle(viewport);
 
         const MIN_W = parseInt(root.getPropertyValue('--slot-w-min'))||42;
         const MAX_W = parseInt(root.getPropertyValue('--slot-w-max'))||56;
         const MIN_H = parseInt(root.getPropertyValue('--slot-h-min'))||50;
         const MAX_H = parseInt(root.getPropertyValue('--slot-h-max'))||64;
+
+        // gap atual e mínimo
         const gapDefault = parseFloat(DZstyles.getPropertyValue('gap'))||8;
         const gapMin = parseFloat(root.getPropertyValue('--slot-gap-min'))||4;
 
         const letters = (dropZone.dataset.letters|0)||0;
-        const available = Math.floor(viewport.clientWidth);
 
+        // largura disponível efetiva: largura do viewport MENOS paddings horizontais
+        const vpPaddingLeft  = parseFloat(VPstyles.getPropertyValue('padding-left'))  || 0;
+        const vpPaddingRight = parseFloat(VPstyles.getPropertyValue('padding-right')) || 0;
+        const available = Math.floor(viewport.clientWidth - vpPaddingLeft - vpPaddingRight);
+
+        // Começa tentando com gap padrão
         let gap = gapDefault;
-        let totalGaps = Math.max(0, letters-1)*gap;
-        let idealW = Math.floor((available - totalGaps)/letters);
-        if(!Number.isFinite(idealW) || idealW<=0) idealW = MAX_W;
 
-        let slotW = clamp(idealW, MIN_W, MAX_W);
-        let needed = slotW*letters + totalGaps;
+        // Calcula a largura EXTERNA de cada slot (conteúdo + 3px*2 de borda)
+        const outer = (w)=> w + 6;
 
-        if(needed>available && gap>gapMin){
-            gap = gapMin; dropZone.style.gap = gap+'px';
-            totalGaps = Math.max(0, letters-1)*gap;
-            idealW = Math.floor((available - totalGaps)/letters);
-            slotW = clamp(idealW, MIN_W, MAX_W);
-            needed = slotW*letters + totalGaps;
-        } else dropZone.style.gap='';
+        // Primeiro, tenta ajustar a largura do slot pra caber sem overflow
+        function computeSlotWidthToFit(avail, letters, gap){
+            if (letters <= 0) return MAX_W;
+            // total = letters * (slotOuter) + gaps*(letters-1)
+            // slotOuter = slotW + 6
+            // => slotW = floor( (avail - gaps*(letters-1) - 6*letters) / letters )
+            const totalGaps = Math.max(0, letters-1) * gap;
+            const numerator = avail - totalGaps - (6 * letters);
+            const raw = Math.floor(numerator / letters);
+            return isFinite(raw) ? raw : MAX_W;
+        }
 
-        if(needed>available) slotW = MIN_W;
+        let slotW = computeSlotWidthToFit(available, letters, gap);
+        // Se ficou fora dos limites, ajusta
+        slotW = clamp(slotW, MIN_W, MAX_W);
+
+        // Verifica se coube; se não coube, tenta reduzir gap até o mínimo e refaz a conta
+        function neededWidth(w, gap){
+            const totalGaps = Math.max(0, letters-1) * gap;
+            return (letters * outer(w)) + totalGaps;
+        }
+
+        let needed = neededWidth(slotW, gap);
+        if (needed > available && gap > gapMin){
+            gap = gapMin;
+            slotW = computeSlotWidthToFit(available, letters, gap);
+            slotW = clamp(slotW, MIN_W, MAX_W);
+            needed = neededWidth(slotW, gap);
+        }
+
+        // Se ainda não coube, fixamos slotW no mínimo e aceitamos overflow (scroll)
+        if (needed > available){
+            slotW = MIN_W;
+            needed = neededWidth(slotW, gap); // (ainda pode passar; ativaremos overflow)
+        }
 
         // Mantém proporção visual e fonte confortável
         const ratio = MAX_H / MAX_W;
         let slotH = Math.round(slotW * ratio); slotH = clamp(slotH, MIN_H, MAX_H);
         const baseRem=1.6, scale=slotW/MAX_W; let fontRem = clamp(baseRem*scale, 1.0, 1.6);
 
+        // Aplica tamanhos e gap calculados
         dropZone.style.setProperty('--slot-w', slotW+'px');
         dropZone.style.setProperty('--slot-h', slotH+'px');
         dropZone.style.setProperty('--tile-font', fontRem+'rem');
+        dropZone.style.gap = gap+'px';
 
-        // Overflow UI
-        const contentW = dropZone.scrollWidth, vpW = viewport.clientWidth;
-        const overflow = contentW > vpW + 1;
+        // Decide overflow com base no cálculo exato
+        const overflow = needed > available + 0.5; // tolerância pequena
         dropWrap.dataset.overflow = overflow ? '1' : '0';
 
-        if (opts.resetScroll) {
-            // garante que o primeiro slot fique visível
-            viewport.scrollLeft = 0;
-        }
+        if (opts.resetScroll) viewport.scrollLeft = 0;
 
-        if(overflow){
+        // Configura trilho se houver overflow
+        if (overflow){
+            const contentW = needed;
+            const vpW = available;
             const trackInner = track.clientWidth - 8;
             const thumbW = clamp(Math.round((vpW/contentW)*trackInner), parseInt(root.getPropertyValue('--thumb-min'))||40, trackInner);
             thumb.style.width = thumbW + 'px';
